--- a/FilmProject/src/main/resources/application.properties
+++ b/FilmProject/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #DataSource Settings:
-spring.datasource.url= jdbc:mysql://localhost:3306/DemoCsrf
+spring.datasource.url= jdbc:mysql://localhost:3306/FilmDataBase
 spring.datasource.username= root
 spring.datasource.password= 
 spring.datasource.driver-class-name= com.mysql.jdbc.Driver
