--- a/expose-dashboard.yml
+++ b/expose-dashboard.yml
@@ -6,6 +6,7 @@ metadata:
   name: kubernetes-dashboard
   namespace: kubernetes-dashboard
 spec:
+  type: NodePort
   ports:
     - port: 443
       targetPort: 8443
