--- a/grafana.yml
+++ b/grafana.yml
@@ -1,15 +1,21 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: monitoring-influxdb
   namespace: kube-system
+  labels:
+    app: influxdb
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: influxdb
   template:
     metadata:
       labels:
         task: monitoring
         k8s-app: influxdb
+        app: influxdb
     spec:
       containers:
       - name: influxdb
@@ -58,18 +64,24 @@ subjects:
   name: heapster
   namespace: kube-system
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: heapster
   namespace: kube-system
+  labels:
+    app: heapster
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: heapster
   template:
     metadata:
       labels:
         task: monitoring
         k8s-app: heapster
+        app: heapster
     spec:
       serviceAccountName: heapster
       containers:
@@ -99,18 +111,24 @@ spec:
   selector:
     k8s-app: heapster
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: monitoring-grafana
   namespace: kube-system
+  labels:
+    app: grafana
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: grafana
   template:
     metadata:
       labels:
         task: monitoring
         k8s-app: grafana
+        app: grafana
     spec:
       containers:
       - name: grafana
