--- a/ckk-shop-public/nginx/default.conf
+++ b/ckk-shop-public/nginx/default.conf
@@ -1,23 +1,23 @@
+
+upstream portainer {
+  server 127.0.0.1:9000;
+}
+
 server {
   listen 443 ssl;
-  
-  # your other configuration directives
   server_name portainer.oktoplace.com;
+  
+  ssl_certificate /etc/letsencrypt/live/oktoplace.com/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/oktoplace.com/privkey.pem; # managed by Certbot
 
-	location / {
-		proxy_pass http://localhost:9000; # Change this to your app's address
-		proxy_set_header Host $host;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  location / {
+    try_files $uri $uri/ @portainer;
+  }
 
-		# enable WebSockets support
-		proxy_http_version 1.1;
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection "upgrade";
-	}
-
-    ssl_certificate /etc/letsencrypt/live/oktoplace.com/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/oktoplace.com/privkey.pem; # managed by Certbot
+  location @portainer {
+    proxy_buffering off;
+    proxy_pass http://portainer;
+  }
 }
 
 server {
