--- a/ckk-shop-public/nginx/default.conf
+++ b/ckk-shop-public/nginx/default.conf
@@ -11,12 +11,16 @@ server {
   ssl_certificate_key /etc/letsencrypt/live/oktoplace.com/privkey.pem; # managed by Certbot
 
   location / {
-    try_files $uri $uri/ @portainer;
-  }
+	proxy_buffering off;
+	proxy_pass http://portainer;
+	proxy_set_header Host $host;
+	proxy_set_header X-Real-IP $remote_addr;
+	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-  location @portainer {
-    proxy_buffering off;
-    proxy_pass http://portainer;
+	# enable WebSockets support
+	proxy_http_version 1.1;
+	proxy_set_header Upgrade $http_upgrade;
+	proxy_set_header Connection "upgrade";
   }
 }
 
