--- a/ckk-shop-public/monitoring/monitoring-docker-stack.yml
+++ b/ckk-shop-public/monitoring/monitoring-docker-stack.yml
@@ -11,7 +11,11 @@ services:
     networks:
       - private
     ports:
-      - 127.0.0.1:9094:8080
+      - mode: host
+        target: 127.0.0.1:9094
+        published: 8080
+    #ports:
+     # - 127.0.0.1:9094:8080
     deploy:
       mode: global
       resources:
@@ -30,7 +34,11 @@ services:
       - '--path.sysfs=/host/sys'
       - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
     ports:
-      - 127.0.0.1:9100:9100
+      - mode: host
+        target: 127.0.0.1:9100
+        published: 9100
+    #ports:
+    #  - 127.0.0.1:9100:9100
     environment:
       - HOST_HOSTNAME=/etc/host_hostname
     networks:
@@ -64,8 +72,12 @@ services:
       - alertmanager:/alertmanager
     networks:
       - private
+    #ports:
+    #  - 127.0.0.1:9093:9093
     ports:
-      - 127.0.0.1:9093:9093
+      - mode: host
+        target: 127.0.0.1:9093
+        published: 9093
     deploy:
       replicas: 1
       placement:
@@ -93,8 +105,12 @@ services:
       - '--web.console.templates=/etc/prometheus/consoles'
     networks:
       - private
+    #ports:
+    #  - 127.0.0.1:9090:9090
     ports:
-      - 127.0.0.1:9090:9090
+      - mode: host
+        target: 127.0.0.1:9090
+        published: 9090
     deploy:
       placement:
         constraints:
@@ -119,8 +135,12 @@ services:
       - PROMETHEUS_ENDPOINT=http://prometheus:9090
     networks:
       - private
+    #ports:
+    #  - 127.0.0.1:3002:3000
     ports:
-      - 127.0.0.1:3002:3000
+      - mode: host
+        target: 127.0.0.1:3002
+        published: 3000
     deploy:
       replicas: 1
       placement:
