--- a/ckk-shop-public/nginx/default.conf
+++ b/ckk-shop-public/nginx/default.conf
@@ -1,4 +1,4 @@
-
+# Portainer 
 upstream portainer {
   server 127.0.0.1:9000;
 }
@@ -13,6 +13,32 @@ server {
   location / {
 	proxy_buffering off;
 	proxy_pass http://portainer;
+	proxy_set_header Host $host;
+	proxy_set_header X-Real-IP $remote_addr;
+	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+	# enable WebSockets support
+	proxy_http_version 1.1;
+	proxy_set_header Upgrade $http_upgrade;
+	proxy_set_header Connection "upgrade";
+  }
+}
+
+# Grafana
+upstream grafana {
+  server 127.0.0.1:3002;
+}
+
+server {
+  listen 443 ssl;
+  server_name grafana.oktoplace.com;
+  
+  ssl_certificate /etc/letsencrypt/live/oktoplace.com/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/oktoplace.com/privkey.pem; # managed by Certbot
+
+  location / {
+	proxy_buffering off;
+	proxy_pass http://grafana;
 	proxy_set_header Host $host;
 	proxy_set_header X-Real-IP $remote_addr;
 	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
