--- a/ckk-shop-public/nginx/default.conf
+++ b/ckk-shop-public/nginx/default.conf
@@ -53,7 +53,7 @@ server {
 server {
 
     root /var/www/html;
-    server_name grafana.oktoplace.com solr.oktoplace.com mongodb.oktoplace.com data.oktoplace.com shop.oktoplace.com oktoplace.com kibana.oktoplace.com admin.oktoplace.com; # managed by Certbot
+    server_name solr.oktoplace.com mongodb.oktoplace.com data.oktoplace.com shop.oktoplace.com oktoplace.com kibana.oktoplace.com admin.oktoplace.com; # managed by Certbot
 
 
 	location / {
