--- a/ckk-shop-public/nginx/default.conf
+++ b/ckk-shop-public/nginx/default.conf
@@ -1,3 +1,107 @@
+
+# Oktoplace 
+upstream oktoplace {
+  server 127.0.0.1:3001;
+}
+
+upstream oktoplace_shop {
+  server 127.0.0.1:8081;
+}
+
+server {
+  listen 443 ssl;
+  server_name shop.oktoplace.com;
+  
+  ssl_certificate /etc/letsencrypt/live/oktoplace.com/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/oktoplace.com/privkey.pem; # managed by Certbot
+
+  location / {
+	proxy_buffering off;
+	proxy_pass http://oktoplace_shop;
+	proxy_set_header Host $host;
+	proxy_set_header X-Real-IP $remote_addr;
+	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+	# enable WebSockets support
+	proxy_http_version 1.1;
+	proxy_set_header Upgrade $http_upgrade;
+	proxy_set_header Connection "upgrade";
+  }
+}
+
+server {
+  listen 443 ssl;
+  server_name oktoplace.com;
+  
+  ssl_certificate /etc/letsencrypt/live/oktoplace.com/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/oktoplace.com/privkey.pem; # managed by Certbot
+
+  location / {
+	proxy_buffering off;
+	proxy_pass http://oktoplace;
+	proxy_set_header Host $host;
+	proxy_set_header X-Real-IP $remote_addr;
+	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+	# enable WebSockets support
+	proxy_http_version 1.1;
+	proxy_set_header Upgrade $http_upgrade;
+	proxy_set_header Connection "upgrade";
+  }
+}
+
+
+# Oktoplace admin 
+upstream oktoplace_admin {
+  server 127.0.0.1:3000;
+}
+
+upstream oktoplace_data {
+  server 127.0.0.1:8080;
+}
+
+server {
+  listen 443 ssl;
+  server_name data.oktoplace.com;
+  
+  ssl_certificate /etc/letsencrypt/live/oktoplace.com/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/oktoplace.com/privkey.pem; # managed by Certbot
+
+  location / {
+	proxy_buffering off;
+	proxy_pass http://oktoplace_data;
+	proxy_set_header Host $host;
+	proxy_set_header X-Real-IP $remote_addr;
+	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+	# enable WebSockets support
+	proxy_http_version 1.1;
+	proxy_set_header Upgrade $http_upgrade;
+	proxy_set_header Connection "upgrade";
+  }
+}
+
+server {
+  listen 443 ssl;
+  server_name admin.oktoplace.com;
+  
+  ssl_certificate /etc/letsencrypt/live/oktoplace.com/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/oktoplace.com/privkey.pem; # managed by Certbot
+
+  location / {
+	proxy_buffering off;
+	proxy_pass http://oktoplace_admin;
+	proxy_set_header Host $host;
+	proxy_set_header X-Real-IP $remote_addr;
+	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+	# enable WebSockets support
+	proxy_http_version 1.1;
+	proxy_set_header Upgrade $http_upgrade;
+	proxy_set_header Connection "upgrade";
+  }
+}
+
 # Portainer 
 upstream portainer {
   server 127.0.0.1:9000;
