--- a/ckk-shop-public/nginx/default.conf
+++ b/ckk-shop-public/nginx/default.conf
@@ -102,6 +102,32 @@ server {
   }
 }
 
+# Mongodb Express
+upstream mongodb {
+  server 127.0.0.1:8082;
+}
+
+server {
+  listen 443 ssl;
+  server_name mongodb.oktoplace.com;
+  
+  ssl_certificate /etc/letsencrypt/live/oktoplace.com/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/oktoplace.com/privkey.pem; # managed by Certbot
+
+  location / {
+	proxy_buffering off;
+	proxy_pass http://mongodb;
+	proxy_set_header Host $host;
+	proxy_set_header X-Real-IP $remote_addr;
+	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+	# enable WebSockets support
+	proxy_http_version 1.1;
+	proxy_set_header Upgrade $http_upgrade;
+	proxy_set_header Connection "upgrade";
+  }
+}
+
 # Portainer 
 upstream portainer {
   server 127.0.0.1:9000;
