--- a/ckk-shop-public/oktoplace_admin/oktoplace_admin-docker-stack.yml
+++ b/ckk-shop-public/oktoplace_admin/oktoplace_admin-docker-stack.yml
@@ -22,4 +22,9 @@ services:
       resources:
         limits:
           memory: 1024M
+
+networks:
+  database:
+    external: true
+    name: database
      
