--- a/ckk-shop-public/solr/solr-docker-stack.yml
+++ b/ckk-shop-public/solr/solr-docker-stack.yml
@@ -4,12 +4,13 @@ services:
   solr:
     image: solr
     ports:
-     - "8983:8983"
+     - 8983:8983
     volumes:
       - data:/var/solr
     command:
       - solr-precreate products
-      - gettingstarted
+    networks:
+      - database
     deploy:
       mode: global
       resources:
