--- a/ckk-shop-public/solr/solr-docker-stack.yml
+++ b/ckk-shop-public/solr/solr-docker-stack.yml
@@ -8,7 +8,8 @@ services:
     volumes:
       - data:/var/solr
     command:
-      - solr-precreate products
+      - solr-precreate products      
+      - gettingstarted
     networks:
       - database
     deploy:
