--- a/ckk-shop-public/solr/solr-docker-stack.yml
+++ b/ckk-shop-public/solr/solr-docker-stack.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   solr:
-    image: solr:9.2.0
+    image: solr:latest
     ports:
      - 8983:8983
     volumes:
@@ -10,8 +10,8 @@ services:
     command:
       - solr-precreate products      
       - gettingstarted
-    networks:
-      - database
+    #networks:
+     # - database
     deploy:
       mode: global
       resources:
