--- a/ckk-shop-public/solr/solr-docker-stack.yml
+++ b/ckk-shop-public/solr/solr-docker-stack.yml
@@ -1,13 +1,26 @@
 version: '3'
+
 services:
   solr:
-    image: solr
+    image: solr:latest
     ports:
-     - "8983:8983"
+     - 8983:8983
     volumes:
       - data:/var/solr
     command:
-      - solr-precreate
+      - solr-precreate products      
       - gettingstarted
+    networks:
+      - database
+    deploy:
+      mode: global
+      resources:
+        limits:
+          memory: 1024M
 volumes:
   data:
+          
+networks:
+  database:
+    external: true
+    name: database
