--- a/ckk-shop-public/nginx/default.conf
+++ b/ckk-shop-public/nginx/default.conf
@@ -1,3 +1,30 @@
+# Solr
+upstream solr {
+  server 127.0.0.1:8983;
+}
+
+server {
+  listen 443 ssl;
+  server_name solr.oktoplace.com;
+  
+  ssl_certificate /etc/letsencrypt/live/oktoplace.com/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/oktoplace.com/privkey.pem; # managed by Certbot
+
+  location / {
+  	auth_basic "Restricted Access";
+        auth_basic_user_file /home/debian/htaccess/.htpasswd;
+	proxy_buffering off;
+	proxy_pass http://solr;
+	proxy_set_header Host $host;
+	proxy_set_header X-Real-IP $remote_addr;
+	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+	# enable WebSockets support
+	proxy_http_version 1.1;
+	proxy_set_header Upgrade $http_upgrade;
+	proxy_set_header Connection "upgrade";
+  }
+}
 
 # Oktoplace 
 upstream oktoplace {
@@ -183,7 +210,7 @@ server {
 server {
 
     root /var/www/html;
-    server_name solr.oktoplace.com mongodb.oktoplace.com data.oktoplace.com shop.oktoplace.com oktoplace.com kibana.oktoplace.com admin.oktoplace.com; # managed by Certbot
+    server_name kibana.oktoplace.com; # managed by Certbot
 
 
 	location / {
