--- a/ckk-shop-public/mongodb/mongodb-docker-stack.yml
+++ b/ckk-shop-public/mongodb/mongodb-docker-stack.yml
@@ -1,4 +1,4 @@
-version: '3.5'
+version: '3.7'
 
 services:
   mongodb:
@@ -17,7 +17,7 @@ services:
       - database
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_ROOT_PASSWORD: $password
 
   mongo-express:
     image: mongo-express:latest
@@ -26,13 +26,13 @@ services:
     networks:
       - database
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongodb:27017/
+      ME_CONFIG_BASICAUTH_USERNAME: 'admin'
+      ME_CONFIG_BASICAUTH_PASSWORD: '$password'
+      ME_CONFIG_MONGODB_URL: mongodb://root:$password@mongodb:27017/
 
 volumes:
   mongodb: {}
-  
+
 networks:
   database:
     external: true
